# Oxide-Lab

./: .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitattributes  .gitignore  .rust-analyzer.toml  .stylelintignore  .stylelintrc.cjs  CHANGELOG.md  IMPLEMENTATION_MODELS_TAB.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LINT_REMAINING.md  MODEL_SUPPORT_SUMMARY.md  PROGRESS.md  README-EN.md  README-PT-BR.md  README-RU.md  README.PT_BR.md  README.RU.md  README.md  ROADMAP-RU.md  ROADMAP.md  STARTUP_TIME_COMPLETE.md  TECHNICAL.md  THIRD_PARTY_LICENSES.md  analyze_large_files.py  arch.md  codemirror-validation-test.md  cog.toml  count_lines.py  diagnose_gguf_dtype.py  dual_push_test.txt  eslint.config.cjs  example.html  external-links-test.md  final-integration-test.md  markdown-syntax-test.md  mdsynt.txt  model_cards.json  (+12 more)
.agent/workflows/: hardware-acceleration.md
.cargo/: config.toml
.cursor/rules/: TypeScript.mdc  clean-codef.mdc  code-quality.mdc  general-sveltekit-typescript-rules.mdc  node-express.mdc  svelte copy.md
.github/workflows/: lint.yml  release.yml
.gitverse/workflows/: demo.yaml
.kiro/steering/: product.md  structure.md  tech.md
.qoder/quests/: render-think-block.md
.qoder/rules/: clean-codef.md  code-quality.md  general-sveltekit-typescript-rules.md  node-express.md  quatro.md  svelte.md
.qoder/rules copy/: candle-architecture.mdc  candle-basics.mdc  candle-complete-guide.mdc  candle-huggingface.mdc  candle-performance.mdc  candle-practical-guide.mdc  candle-testing.mdc  rust-2024-edition.mdc  svelte5-basics.mdc  svelte5-performance.mdc  tauri-v2-architecture.mdc  tauri-v2-performance-optimization.mdc  typescript-best-practices.mdc  ui-ux-design-2025.mdc
.roo/: mcp.json
docs/: APP_VERSION_SYNC.md  ARCH-EXTENSIBILITY-RU.md  ARCH-EXTENSIBILITY.md  CARGO_DENY_CONFIG.md  CHAT_HISTORY.md  CHAT_HISTORY_DEBUGGING.md  CLEANUP_DEBUG.md  DEBUG_METRICS_UI.md  FEATURES_IMPLEMENTATION.md  GGUF_DTYPE_ERROR_FIX.md  GGUF_TOKENIZER_FIX.md  METRICS_UI_COMPLETE.md  PERFORMANCE_INTEGRATION_COMPLETE.md  PERFORMANCE_MONITORING.md  PRECISION_POLICY_IMPLEMENTATION.md  SHIKI_TAURI_INTEGRATION_RU.md  SPRINT4_FINAL_STATUS.md  STARTUP_TIME_IMPLEMENTATION.md  UI_PERFORMANCE_METRICS.md  VERSION_MANAGEMENT.md  WEIGHTS_LOADER.md
docs/screenshots/: .gitkeep
landing-site/: README.md  package-lock.json  package.json  rollup.config.js  svelte.config.js  tsconfig.json
landing-site/public/: global.css
landing-site/scripts/: setupTypeScript.js
landing-site/src/: App.svelte  app.css  app.d.ts  app.html  svelte.d.ts
nb/: Qwen3_(4B)-Instruct.ipynb
scripts/: analyze_large_files.py  auto-version-bump.ps1  check-licenses.js  sync-version.cjs  sync-version.js  test-version-sync.cjs
src/: app.css  app.d.ts  app.html  components.json  main.rs
src-tauri/: Cargo.toml  build.rs  build_with_msvc.bat  clippy.toml  deny.toml  stdc++.exp  stdc++.lib  tauri.conf.json  test_output.txt  test_output_2.txt
src-tauri/.oxide-data/rag/: rag.db-shm  rag.db-wal
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/en-US/: messages.ftl
src-tauri/locales/pt-BR/: messages.ftl
src-tauri/locales/ru/: messages.ftl
src-tauri/src/: lib.rs  state.rs
src-tauri/src/api/: device.rs  download_manager.rs  local_models.rs  mod.rs  model_cards.rs  openai_server.rs  performance_api.rs  template.rs
src-tauri/src/api/commands/: device.rs  experimental.rs  generation.rs  locale.rs  metadata.rs  mod.rs  model.rs  precision.rs  prompts.rs  stt.rs  threads.rs
src-tauri/src/api/model_loading/: context_algo.rs  context_settings.rs  gguf.rs  hub_gguf.rs  hub_safetensors.rs  local_safetensors.rs  mod.rs  safetensors.rs
src-tauri/src/api/model_manager/: manifest.rs
src-tauri/src/app/: bootstrap.rs
src-tauri/src/core/: attachments.rs  attachments_text.rs  audio.rs  audio_capture.rs  config.rs  device.rs  log.rs  mod.rs  modality.rs  multimodal.rs  performance.rs  precision.rs  prompt.rs  rayon_pool.rs  scheduler.rs  state.rs  stt_whisper.rs  template_registry.rs  token_output_stream.rs  tokenizer.rs  types.rs  vision.rs  weights.rs
src-tauri/src/core/templates/: deepseekr1.rs
src-tauri/src/generate/: cancel.rs  ctx.rs  emit.rs  minp.rs  mod.rs  sampling.rs  stream.rs
src-tauri/src/model/: mod.rs  qwen3_offload.rs
src-tauri/src/models/: candle_llm.rs  gemma3.rs  gemma3_builder.rs  mod.rs  qwen3.rs  qwen3_builder.rs  registry.rs
src-tauri/src/models/api/: config.rs  error.rs  hub.rs  mod.rs  model.rs  optimization.rs  pipeline.rs  sampling.rs  tokenizer.rs
src-tauri/src/models/common/: builder.rs  builder_test.rs  candle_llm.rs  flash_helpers.rs  mod.rs  model.rs
src-tauri/src/models/gemma3/: builder.rs  model.rs
src-tauri/src/models/llama/: gguf.rs  mod.rs  safetensors.rs
src-tauri/src/models/qwen2/: gguf.rs  mod.rs  safetensors.rs
src-tauri/src/models/qwen2_moe/: mod.rs  safetensors.rs
src-tauri/src/models/qwen3/: builder.rs  gguf.rs  mod.rs  model.rs  safetensors.rs
src-tauri/src/models/qwen3_moe/: gguf.rs  mod.rs  model.rs  quantized_model.rs  safetensors.rs
src-tauri/src/offload/: mod.rs
src-tauri/src/rag/: mod.rs
src-tauri/src/rag/inference/: embeddings.rs  mod.rs  search.rs
src-tauri/src/rag/ingestion/: chunking.rs  mod.rs  processor.rs
src-tauri/src/rag/storage/: cache.rs  mod.rs  vector_db.rs
src-tauri/src/rag/tauri_integration/: mod.rs
src-tauri/tests/: architecture_detection.rs  chat_generation_integration.rs  chat_template_integration.rs  context_truncation.rs  device_selection.rs  gguf_tests.rs  grammar_sampling.rs  llama_architecture.rs  model_registry.rs  model_scheduler_test.rs  multimodal_preprocessing.rs  no_think_detection.rs  prompt_builder.rs  sampling_options.rs  smoke_tests.rs  weights_loader.rs
src/lib/: types.ts  utils.ts  version.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/styles/: animations.css  base.css  components.css  scrollbar.css  variables.css
src/tests/: Tabs.test.ts  (+1 more)
static/: Text Document.html
tools/: jinja_converter.py
tools/gguf-inspector/: Cargo.toml  README.md
(+420 files in other folders)
