[package]
name = "oxide-lab"
version = "0.13.0"
description = "A Tauri App"
authors = ["FerrisMind"]
license = "MIT"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "llm_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1.19"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
qdrant-client = { version = "1.15" }
sled = "1.0.0-alpha.124"
tantivy = { version = "0.25", default-features = false, features = ["mmap"] }
tiktoken-rs = "0.7"
pdf-extract = "0.10"
docx-rs = "0.4"
lopdf = "0.38"
parking_lot = "0.12"
tracing = "0.1"
blake3 = "1"
dashmap = "5"
walkdir = "2"
quick-xml = "0.31"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
aes-gcm = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"

# Candle (ML) and related crates
# Отключаем default-features; включение CUDA делаем через нашу feature `cuda` ниже
candle = { package = "candle-core", git = "https://github.com/huggingface/candle.git", default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle.git", default-features = false }
candle-transformers = { git = "https://github.com/huggingface/candle.git", default-features = false }
# Опционально: flash-attn (включается через нашу feature `flash-attn` ниже)
tokenizers = { version = "0.21", features = ["onig"] }
minijinja = "2"

# Поддержка всех основных BLAS библиотек
openblas-src = { version = "0.10", features = ["cblas", "system"], optional = true }
intel-mkl-src = { version = "0.8", optional = true }
blis-src = { version = "0.2", optional = true }

# CPU детектирование
raw-cpuid = "11.0"

# Image processing (removed multimodality)

# Audio processing
# rodio = { version = "0.21", optional = true }
# rubato = { version = "0.16", optional = true }

# Random number generation
rand = "0.8"
base64 = "0.22"

# Логирование
log = "0.4"
env_logger = "0.11"

# Мониторинг производительности
sysinfo = "0.33"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }

# Для парсинга и валидации
regex = "1"


[features]
default = ["auto-blas", "cuda"]
auto-blas = ["openblas-src"]  # По умолчанию OpenBLAS для совместимости
intel-optimized = ["intel-mkl-src"]
amd-optimized = ["openblas-src", "blis-src"]
# По умолчанию собираем только CPU-билд для ускорения компиляции.
# GPU-бэкэнды можно включать через `--features cuda` или `--features metal` при необходимости.

# Объявление фичи `cuda` (нужно, иначе Cargo ругается, что default ссылается на несуществующую фичу)
cuda = [
    # Прокидываем флаг в зависимости candle-*
    "candle/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]

# Объявление фичи `metal` для поддержки Metal на macOS
metal = [
    # Прокидываем флаг в зависимости candle-*
    "candle/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]

# Заглушка для опционального backend'а Qdrant (чтобы cfg(feature = "rag-qdrant") не считался неожиданным)
rag-qdrant = []

# Audio processing features
## no extra features

[package.metadata.cargo-machete]
ignored = ["rand"]

[profile.dev]
opt-level = 0
debug = 1
debug-assertions = true
overflow-checks = true
incremental = true
lto = false
codegen-units = 256

[profile.dev.build-override]
opt-level = 0
codegen-units = 256
debug = false

[profile.dev.package."candle-core"]
debug = false

[profile.dev.package."candle-nn"]
debug = false

[profile.dev.package."candle-transformers"]
debug = false

[profile.release]
codegen-units = 8
lto = "thin"
strip = "symbols"
debug = false

[profile.test]
inherits = "dev"
