[package]
name = "oxide-lab"
version = "0.13.0"
description = "A Tauri App"
authors = ["FerrisMind"]
license = "MIT"
edition = "2024"

[lib]
name = "oxide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1.19"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
candle = { package = "candle-core", git = "https://github.com/huggingface/candle.git", default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle.git", default-features = false }
candle-transformers = { git = "https://github.com/huggingface/candle.git", default-features = false }
tokenizers = { version = "0.21", features = ["onig"] }
minijinja = "2"
# rodio = { version = "0.21", optional = true }
# rubato = { version = "0.16", optional = true }
rand = "0.9"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
sysinfo = "0.37"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
regex = "1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-chrome = "0.7.2"

[features]
default = []

cuda = [
    # Прокидываем флаг в зависимости candle-*
    "candle/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]

metal = [
    # Прокидываем флаг в зависимости candle-*
    "candle/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]

fast-cpu-mkl = [
  "candle/mkl",
  "candle-nn/mkl",
  "candle-transformers/mkl",
]
fast-cpu-accelerate = [
  "candle/accelerate",
  "candle-nn/accelerate",
  "candle-transformers/accelerate",
]

flash-attn = ["candle-transformers/flash-attn"]

cudnn = ["candle/cudnn", "candle-nn/cudnn", "candle-transformers/cudnn"]

[package.metadata.cargo-machete]
ignored = ["rand"]

[profile.dev]
debug-assertions = true

[profile.dev.package."*"]
debug-assertions = false

[patch.crates-io]
ring = { git = "https://github.com/briansmith/ring", branch = "main" }
