[package]
name = "oxide-lab"
version = "0.13.1"
description = "Private AI chat application with local model support"
authors = ["FerrisMind"]
license = "Apache-2.0"
edition = "2024"

[lib]
name = "oxide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-store = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1.19"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
candle = { package = "candle-core", version = "=0.9.2-alpha.2", default-features = false }
candle-nn = { package = "candle-nn", version = "=0.9.2-alpha.2", default-features = false }
candle-transformers = { package = "candle-transformers", version = "=0.9.2-alpha.2", default-features = false }
tokenizers = { version = "0.21", features = ["onig"] }
minijinja = "2.0"
# rodio = { version = "0.21", optional = true }
# rubato = { version = "0.16", optional = true }
rand = "0.9"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
sysinfo = "0.37"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
regex = "1.0"
rayon = "1.0"
byteorder = "1.5"
cpal = "0.16"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-chrome = "0.7"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
quick-xml = "0.38"

windows-sys = { version = "0.61", features = ["Win32_System_Threading"] }

[features]
default = []

cuda = [
    # Прокидываем флаг в зависимости candle-*
    "candle/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]

metal = [
    # Прокидываем флаг в зависимости candle-*
    "candle/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]

fast-cpu-mkl = [
  "candle/mkl",
  "candle-nn/mkl",
  "candle-transformers/mkl",
]
fast-cpu-accelerate = [
  "candle/accelerate",
  "candle-nn/accelerate",
  "candle-transformers/accelerate",
]

flash-attn = ["candle-transformers/flash-attn"]

cudnn = ["candle/cudnn", "candle-nn/cudnn", "candle-transformers/cudnn"]

[package.metadata.cargo-machete]
ignored = ["rand", "tauri-build"]

[profile.dev]
debug-assertions = true

[profile.dev.package."*"]
debug-assertions = false
